--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.24.0"
+    "axios": "^0.24.0",
+    "form-data": "^4.0.0",
+    "html-to-text": "^8.1.0",
+    "is-html": "^3.0.0"
   }
 }
