--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.24.0",
+    "dotenv": "^10.0.0",
     "form-data": "^4.0.0",
     "html-to-text": "^8.1.0",
     "is-html": "^3.0.0"
